--- a/brunaberleze.com.br/index.html
+++ b/brunaberleze.com.br/index.html
@@ -31,16 +31,16 @@
             <p><label for="sobrenome"> Volei </label>
             <input type="checkbox" name="volei">
             <p><label for="sobrenome"> Minecraft </label>
-            <input type="checkbox" name="minecraft">
+            <input type="checkbox" name="minecraft"> 
             
             <p> <label for="sobrenome"> Masculino </label>
-            <input type="radio" name="sexo" value="1">
+            <input type="radio" name="sexo" value="1"checked>
             <label for="sobrenome"> Feminino </label>
             <input type="radio" name="sexo" value="2">
             
             <select name="estado">
             <optgroup label="região sul">
-            <option value="RS"> Rio Grande do Sul </option>
+            <option value="RS" selected> Rio Grande do Sul </option>
             <option value="SP"> São Paulo</option>
             <option value="SC"> Santa Catarina </option>
             <option value="??"> Acapulco </option>
